2003-07-31  Derek Price  <derek@ximbiot.com>

	* texi2html.pl (T2H_OPTIONS->{'no-expand'}): Remove useless linkage.

2003-07-31  Patrice Dumas <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: A new option -no-expand which does 
	the reverse of -expand.
	Text before the first @node or sectionning command is 
	outputted as part of the first section. A new option enables the 
	reverse: if -ignore-preamble-text is set (variable 
	$IGNORE_PREAMBLE_TEXT) this text is ignored.
	Handle macros appearing in that part of texinfo files (@direntry
	and @dircategory ignored, @shorttitlepage handled).
	Ignore everything at the beginning of the file until \input or an
	@-command preceded by optionnal spaces.
	better handling of @titlefont.

2003-07-29  Patrice Dumas <dumas@centre-cired.fr>
	
	* texi2html.pl, texi2html.init: if split, top and misc elements (about,
	toc, ...) always have a bottom navigation panel.
	If there is no @top and the @node Top isn't associated with any section
	it is considered to be the top element.
	The top name is Top when there is no name nor title (previously was
	"Untitled Document").
	bugfix: top element handled as top even when it is the last element.

2003-07-22  Patrice Dumas <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init, examples/*: add support for @cartouche
	and @titlefont.
	preliminary support for css. All the element needing style have a 
	class attribute. The commands which are associated with a class by
	makeinfo have that class too. The styles are in the <head> in <style>.
	A new init file, inlinestyle.init, should be used when style 
	attributes within html elements are wanted.
	A new option, "-U value" does the same than "@clear value" (makeinfo
	has that option, too).
	A new configuration variable L2H_HTML_VERSION for the html version 
	passed to latex2html.
	@tex or @math don't start a new paragraph.
	* Tests/*: test for @raisesections and @lowersections, and for 
	@cartouche.
