@@ -4,6 +4,8 @@
 
 Garbage
 
+@titlefont{Example with a section before the top node and another node}
+
 @unnumbered before nodes
 
 in unnumbered
@@ -11,9 +13,13 @@ in unnumbered
 @node Top
 Top node
 
+@titlefont{   }
+@titlefont{This is the top node}
+@titlefont{second titlefont}
 
 @node second node,,,(dir)
 
+@titlefont{This is the second node}
 second node
 
 @bye
