@@ -4,6 +4,8 @@
 
 Garbage
 
+@titlefont{Titlefont before top node}
+
 @node ToP
 Top node
 
